# tauri-shared

./: .gitignore  API.md  Cargo.toml  IMPLEMENTATION.md  README.md  ROADMAP.md  algorithms-manifest.json
ANALYSIS/: 01_STRUCTURE.md  02_ALGORITHMS.md  03_BINDINGS.md  04_INTEGRATION_NOSQL_ORM.md  05_SDUI_RUNTIME.md  06_FINDINGS_SUMMARY.md
bindings/: AppConfig.ts  AppSettings.ts  CanvasElement.ts  ColorMode.ts  CommandDef.ts  ComponentDef.ts  ComponentEvent.ts  ComponentProp.ts  CrudResult.ts  DataBinding.ts  EventSignature.ts  GridArea.ts  GridDefaults.ts  GridElement.ts  GridPosition.ts  GridTemplate.ts  GridTrack.ts  I18nConfig.ts  Layout.ts  LayoutSlot.ts  LocaleMap.ts  MiddlewareDef.ts  ModuleDef.ts  NamedGridArea.ts  Page.ts  PageMeta.ts  PageSection.ts  PaginatedResult.ts  RenderedElement.ts  RenderedPage.ts  RenderedSection.ts  Response.ts  ResponsiveBreakpoints.ts  ResponsiveClasses.ts  RouteConfig.ts  RouteMatch.ts  SchemaValidationError.ts  ServiceCrud.ts  ServiceDef.ts  ServiceField.ts  (+10 more)
scripts/: generate_ts_bindings.sh
src/: axum_handlers.rs  crud.rs  env.rs  error.rs  extension.rs  http_client.rs  lib.rs  logger.rs  lru.rs  response.rs  result.rs  websocket.rs
src/algorithms/: graph.rs  math.rs  mod.rs  registry.rs  sanitization.rs  search.rs  searching.rs  sorting.rs  string.rs  validation.rs
src/commands/: algorithm_commands.rs  crud_macro.rs  kernel_db.rs  kernel_entity.rs  logger_commands.rs  mod.rs  schema_commands.rs  schema_db.rs  schema_sync_commands.rs  sdui_commands.rs  update_commands.rs
src/crud/: service.rs
src/i18n/: translate.rs
src/logger/: file_writer.rs  log_entry.rs  log_level.rs  logger_struct.rs  macros.rs  mod.rs
src/macros/: commands.rs  mod.rs
src/migration/: error.rs  migration.rs  mod.rs
src/rbac/: auth.rs  commands.rs  mod.rs  models.rs  permissions.rs  roles.rs
src/repository/: kernel_repository.rs  mod.rs
src/runtime/: bindings.rs  engine.rs  mod.rs  router.rs  validation.rs
src/schema/: app.rs  component.rs  entity.rs  grid.rs  i18n.rs  layout.rs  mod.rs  module.rs  page.rs  runtime.rs  service.rs  theme.rs  ui_schema.rs
src/storage/: json_db.rs  json_provider.rs  mod.rs  schema_setup.rs  schema_sync_service.rs  signal_store.rs
src/sync/: local_first.rs  mod.rs  mongo_bridge.rs  schema_sync.rs
src/typescript/: generator.rs  mod.rs
src/update/: checker.rs  downloader.rs  installer.rs  mod.rs  models.rs  platform.rs
src/validation/: conn_id.rs  mod.rs  name.rs  sql.rs
