[package]
name = "tauri-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proc-macro2 = "1"
quote = "1"
syn = "1"
schemars = { version = "0.8", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt", "sync"] }
nosql_orm = { git = "https://github.com/rusnakdima/nosql_orm.git", branch = "main", features = ["json"] }
petgraph = { version = "0.6", optional = true }
ts-rs = "6"
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.5"

[dev-dependencies]
tokio = { version = "1", features = ["rt"] }
wiremock = "0.6"

[features]
default = []
algorithms = ["dep:petgraph"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("tauri"))'] }

[lib]
