[package]
name = "tauri-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = "2"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proc-macro2 = "1"
quote = "1"
syn = "1"
schemars = { version = "0.8", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt", "sync", "net", "time"] }
futures-util = "0.3"
once_cell = "1"
tauri-plugin-shell = "2"
thiserror = "2"
tokio-tungstenite = "0.23"
nosql_orm = { git = "https://github.com/rusnakdima/nosql_orm.git", branch = "main", features = ["json", "mongo", "full", "validators"] }
regex = "1"
ts-rs = { version = "6", features = ["chrono-impl", "serde-compat"] }
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.17"
dirs = "5"
dotenvy = { version = "0.15", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt"] }
tempfile = "3"

[features]
default = ["dotenvy"]
algorithms = ["dotenvy"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("tauri"))'] }

[lib]
